--- a/frontend/src/components/lang/id.json
+++ b/frontend/src/components/lang/id.json
@@ -71,5 +71,50 @@
             "placeInfoContact": "Masukkan nama kontak",
             "placeNumberTelp": "Masukkan nomer telepon"
         }
+    },
+    "Home": {
+        "featuredVenues": "Tempat Terbaik Untuk Anda",
+        "discAllExperience": "Temukan semua pengalaman",
+        "loadingData": "Memuat data lapangan...",
+        "aboutBadmin": "Mengapa Memesan Melalui BadminKuy?",
+        "pltOnline": "Platform Online",
+        "reserBadmin": "Pemesanan lapangan bulu tangkis dapat dilakukan melalui situs web atau secara online.",
+        "recomenField": "Bidang yang direkomendasikan",
+        "findBadminton": "Memudahkan untuk menemukan lapangan bulu tangkis di daerah bekasi.",
+        "onlnPayment": "Pembayaran Online",
+        "provideOnline": "Menyediakan pembayaran online untuk keamanan dan kenyamanan pelanggan.",
+        "titleAbout": "Tentang Kami",
+        "descAbout1": "BadminKuy adalah platform pemesanan lapangan bulu tangkis yang memudahkan Anda untuk mencari, membandingkan, dan memesan lapangan favorit anda secara online.",
+        "descAbout2": "Kami bekerja sama dengan berbagai pusat olahraga dan lapangan bulu tangkis untuk menyediakan pengalaman bermain yang nyaman, praktis, dan transparan bagi semua pemain, mulai dari pemula hingga atlet profesional.",
+        "featuredAthlt": "Atlet Terpilih",
+        "featuredDesc": "Kenalan sama atlet-atlet yang sering main di BadminKuy",
+        "Athlet": {
+            "hero1": "Kevin Sanjaya",
+            "hero2": "Marcus Gideon",
+            "hero3": "Mohammad Ahsan",
+            "hero4": "Hendra Setiawan",
+            "hero5": "Greysia Polii",
+            "hero6": "Gregoria Mariska Tanjung",
+            "hero7": "Fajar Alfian",
+            "hero8": "Muhammad Rian Ardianto",
+            "positionMens": "Ganda Pria",
+            "positionWomens": "Ganda Perempuan"
+        },
+        "communityAch": "Komunitas &amp; Prestasi",
+        "communityText": "Membangun keunggulan bulu tangkis dan membutuhkan semangat kebersamaan di seluruh Uni Emirat Arab sejak 2025.",
+        "badgeYear": "Sejak 2019",
+        "brandPartners": "Mitra Merek Terpercaya",
+        "descriptionPartners": "Dealer resmi merek-merek kelas dunia Yonex, Victor, dan Apacs.",
+        "threeLoc": "3 Lokasi",
+        "premiumFacilities": "Fasilitas Premium",
+        "descPremium": "Sukses mengelola kompleks olahraga kelas atas di Abu Dhabi dan Al Ain.",
+        "levelAthlt": "Semua Level",
+        "athltDev": "Perkembangan Atletik",
+        "athltDesc": "Mengembangkan bakat atletik melalui program latihan terstruktur",
+        "badgeUaGc": "UAE dan GCC",
+        "badgeTitle": "Dampak Regional",
+        "descRegion": "Membangun budaya bulu tangkis yang kuat diseluruh wilayah UAE dan GCC",
+        "titleMission": "Misi Kami",
+        "textMission": "Untuk mempromosikan gaya hidup aktif dan meningkatkan pengalaman olahraga melalui peralatan premium, fasilitas kelas dunia, dan pelatihan oleh pelatih ahli. Kami berkomitmen untuk mengembangkan bakat dan membangun komunitas bulu tangkis yang dinamis yang menginspirasi keunggulan di setiap tingkatan."
     }
 }
