fix: feature language

--- a/frontend/src/components/lang/en.json
+++ b/frontend/src/components/lang/en.json
@@ -116,5 +116,65 @@
         "descRegion": "Building a strong badminton culture across the UAE and GCC regions",
         "titleMission": "Our Mission",
         "textMission": "To promote an active lifestyle and enhance the sports experience through premium equipment, world-class facilities, and training by expert coaches. We are committed to developing talent and building a dynamic badminton community that inspires excellence at every level."
-        }
+        },
+    "contactUs": {
+        "titleContact": "Contact Form",
+        "headContact": "Contact Us",
+        "fullName": "Full Name",
+        "emailAddress": "Email Address",
+        "subject": "Subject",
+        "message": "Message",
+        "btmAddress": "Address:",
+        "btmNameStreet": "198 West 21th Street,",
+        "btmCityStreet": "Suite 721 New York NY 10016",
+        "phone": "Phone:",
+        "numberPhone": "+ 1235 2355 98",
+        "titleEmail": "Email:",
+        "infoEmail": "info@yoursite.com",
+        "titleWeb": "Website:",
+        "infoWeb": "yoursite.com"
+    },
+    "AppFooter": {
+        "titleWeb": "BadminKuy",
+        "copyright": "BadminKuy. All Rights Reserved.",
+        "linksFooter": "Terms of Service",
+        "privacyFooter": "Privacy Policy",
+        "followMedsos1": "Follow us on Instagram",
+        "followMedsos2": "Get to know us on LinkedIn"
+    },
+    "Auth": {
+        "titleInfo": "Welcome to Court Booking Platform",
+        "descInfo": "Sign in to your account to manage your playing schedule, view booking history, and enjoy easy court reservations all in one place.",
+        "footer": "Court Booking. All rights reserved.",
+        "titleForgot": "Forgot your password?",
+        "descForgot": "Don't worry, that's normal. Enter your registered email address and reset your field rental account password directly on this page",
+        "descRegister": "Register for a Court Booking account to easily manage your playing schedule. Save booking history, manage reservations, and receive schedule reminders all in one system.",
+        "list1": "• Book courts anytime",
+        "list2": "• View and manage your playing schedule",
+        "list3": "• Receive reminder notifications before your session starts",
+        "backToFormForgot": "Back to previous",
+        "placeEmail": "Enter your previous email address",
+        "newPassword": "New Password",
+        "placeNewPassword": "Enter a new password",
+        "confirmPasswordNew": "Confirm New Password",
+        "placeConfirmPassword": "Enter new password confirmation",
+        "isLoadingProgress": "Processing...",
+        "isLoadingChangePassword": "Change Password",
+        "titleLogin": "Sign in to your account",
+        "descLogin": "Don't have an account?",
+        "descPass": "Lupa Password?",
+        "directRegister": "Register Now",
+        "rememberMe": "Remember me",
+        "textEmail": "Email",
+        "textRegis": "Register",
+        "textPassword": "Password",
+        "btnSubmit": "Sign In",
+        "btnOr": "Or",
+        "signInGoogle": "Sign in with Google",
+        "regisAccount": "Create Account",
+        "desAccount": "Already have an account?",
+        "textLogin": "Login Now",
+        "fullName": "Full Name",
+        "placeFullname": "Enter your full name"
+    }
 }
