--- a/frontend/src/components/lang/id.json
+++ b/frontend/src/components/lang/id.json
@@ -116,5 +116,65 @@
         "descRegion": "Membangun budaya bulu tangkis yang kuat diseluruh wilayah UAE dan GCC",
         "titleMission": "Misi Kami",
         "textMission": "Untuk mempromosikan gaya hidup aktif dan meningkatkan pengalaman olahraga melalui peralatan premium, fasilitas kelas dunia, dan pelatihan oleh pelatih ahli. Kami berkomitmen untuk mengembangkan bakat dan membangun komunitas bulu tangkis yang dinamis yang menginspirasi keunggulan di setiap tingkatan."
+    },
+    "contactUs": {
+        "titleContact": "Formulir Kontak",
+        "headContact": "Hubungi Kami",
+        "fullName": "Nama Lengkap",
+        "emailAddress": "Alamat Email",
+        "subject": "Subjek",
+        "message": "Pesan",
+        "btmAddress": "Alamat:",
+        "btmNameStreet": "Jalan West ke-21 No. 198,",
+        "btmCityStreet": "Suite 721 New York, NY 10016",
+        "phone": "Telepon:",
+        "numberPhone": "+1 235 2355 98",
+        "titleEmail": "Email:",
+        "infoEmail": "info@yoursite.com",
+        "titleWeb": "Situs Web:",
+        "infoWeb": "yoursite.com"
+    },
+    "AppFooter": {
+        "titleWeb": "BadminKuy",
+        "copyright": "BadminKuy. Seluruh Hak Dilindungi.",
+        "linksFooter": "Syarat dan Ketentuan",
+        "privacyFooter": "Kebijakan Privasi",
+        "followMedsos1": "Ikuti kami di Instagram",
+        "followMedsos2": "Kenali kami di LinkedIn"
+    },
+    "Auth": {
+        "titleInfo": "Selamat Datang di Sewa Lapangan",
+        "descInfo": "Masuk ke akun Anda untuk mengatur jadwal bermain, melihat riwayat pemesanan, dan menikmati kemudahan booking lapangan dalam satu tempat.",
+        "footer": "Sewa Lapangan. Semua hak dilindungi undang-undang",
+        "titleForgot": "Lupa kata sandi?",
+        "descForgot": "Tenang saja, itu hal yang wajar. Masukkan alamat email yang terdaftar dan atur ulang kata sandi akun sewa lapangan Anda langsung di halaman ini.",
+        "descRegister": "Daftar akun Sewa Lapangan untuk mengatur jadwal bermainmu dengan lebih mudah. Simpan riwayat pemesanan, kelola booking, dan dapatkan pengingat jadwal langsung dalam satu sistem.",
+        "list1": "• Booking lapangan kapan saja",
+        "list2": "• Lihat dan kelola jadwal bermain",
+        "list3": "• Notifikasi pengingat sebelum jadwal dimulai",
+        "backToFormForgot": "Kembali ke halaman sebelumnya",
+        "placeEmail": "Masukkan alamat email terdaftar",
+        "newPassword": "Kata Sandi Baru",
+        "placeNewPassword": "Masukkan kata sandi baru",
+        "confirmPasswordNew": "Konfirmasi Kata Sandi Baru",
+        "placeConfirmPassword": "Masukkan konfirmasi kata sandi baru",
+        "isLoadingProgress": "Sedang diproses...",
+        "isLoadingChangePassword": "Ubah Kata Sandi",
+        "titleLogin": "Masuk ke akun Anda",
+        "descLogin": "Belum punya akun?",
+        "descPass": "Lupa kata sandi?",
+        "directRegister": "Daftar Sekarang",
+        "rememberMe": "Ingat saya",
+        "textEmail": "Email",
+        "textRegis": "Daftar",
+        "textPassword": "Kata Sandi",
+        "btnSubmit": "Masuk",
+        "btnOr": "Atau",
+        "signInGoogle": "Masuk dengan Google",
+        "regisAccount": "Daftar Akun",
+        "desAccount": "Sudah punya akun?",
+        "textLogin": "Login Sekarang",
+        "fullName": "Nama Lengkap",
+        "placeFullname": "Masukkan nama anda"
     }
 }
